
2019-05-20  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: setting of DIFF_FLAGS now done by configure
	* Makefile.am: use quotes for filenames in external commands,
	  run testsuite with active runtime checks

2019-03-16  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: new DIFF_FLAGS initialized to --strip-trailing-cr to allow
	  valid test results also with unclean/unexpected EOL
	* report.pl: reduced number of environment checks,
	  adjusted to actually work with a MSWin32 port of perl

2019-01-18  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: fix for Bug #563: new WGET_FLAGS initialized to "-t1 -T5"
	  to explicit specify the timeout and allow overriding these parameters

2019-01-01  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: renamed target all to modules as we don't want to
	  auto-generate those

2018-12-30  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am (newcob.val.tar.gz) new target to download from sourceforge
	* Makefile.am: newcob.val.tar.gz / newcob.val.Z are also copied from
	  srcdir if existing there already
	* Makefile.am: fix for Bug #563: fall-back to download from sourceforge
	  if download from NIST is not possible
	* Makefile.am (all): new target extracting all tests
	* Makefile.am: additional insert test names when generating the module
	  specific Makefile
	* Makefile.module.in (test-local, test-O-local): new targets to allow
	  running the tests with a GnuCOBOL version that is locally installed
	  instead of the version currently build
	* Makefile.module.in (lib, lib-local): new targets to only compile
	  the module specific libs
	* Makefile.module.in: new targets for single tests
	* report.pl: extracted functions compile_lib and run_test
	* report.pl: allow to run a single test by passing the test name
	  as parameter or compiling libs only by passing "lib"

2018-06-05  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: split rules for EXEC85 and EXEC85.cob to prevent